Packetstream_Broadcast_Inner_Outer_Product/pl_kernels/_x/hls_packet_receiver/hls_packet_receiver/hls_packet_receiver/solution/.autopilot/db/clang.err.log
/home/sai.divya/pkt_clone/AI_Engine_Development/Feature_Tutorials/04-packet-switching/pktstream_aie/pl_kernels/hls_packet_receiver.cpp:21:51: error: use of undeclared identifier 'Dataout0_0'
static const unsigned int packet_ids[PACKET_NUM]={Dataout0_0, Dataout0_1, Dataout0_2, Dataout0_3};
                                                  ^
/home/sai.divya/pkt_clone/AI_Engine_Development/Feature_Tutorials/04-packet-switching/pktstream_aie/pl_kernels/hls_packet_receiver.cpp:21:63: error: use of undeclared identifier 'Dataout0_1'
static const unsigned int packet_ids[PACKET_NUM]={Dataout0_0, Dataout0_1, Dataout0_2, Dataout0_3};
                                                              ^
/home/sai.divya/pkt_clone/AI_Engine_Development/Feature_Tutorials/04-packet-switching/pktstream_aie/pl_kernels/hls_packet_receiver.cpp:21:75: error: use of undeclared identifier 'Dataout0_2'
static const unsigned int packet_ids[PACKET_NUM]={Dataout0_0, Dataout0_1, Dataout0_2, Dataout0_3};
                                                                          ^
/home/sai.divya/pkt_clone/AI_Engine_Development/Feature_Tutorials/04-packet-switching/pktstream_aie/pl_kernels/hls_packet_receiver.cpp:21:87: error: use of undeclared identifier 'Dataout0_3'
static const unsigned int packet_ids[PACKET_NUM]={Dataout0_0, Dataout0_1, Dataout0_2, Dataout0_3};
                                                                                      ^
4 errors generated.
